# agentic-patterns

./: .env.example  .gitignore  README.md  agents_server.py  main.py  main_unified.py  pyproject.toml  unified_entry_point.py
agents/: __init__.py  base_agent.py  evaluator_agent.py  execution_agent.py  local_agent.py  monitoring_agent.py  planning_agent.py  summarizer_agent.py
docker/: Dockerfile  build.sh  docker-compose.yml  run_server.sh
memory/: __init__.py  short_term_memory.py
orchestators/: __init__.py  langgraph_orchestrator.py
services/: coordinator.py  llm_factory.py
tests/: README.md  test_main_unified.py  test_unified_entry_point.py  test_web_search_tool.py
tools/: compress_context_tool.py  curl_search_tool.py  web_search_tool.py
workflows/: __init__.py  base_workflow.py  direct_workflow.py  parallel_workflow.py  sequential_workflow.py
