[project]
name = "agenticpatterns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain==1.2.11",
    "langchain-ollama==1.0.1",
    "langchain-openai==1.1.11",
    "langgraph>=1.1.0",
    "openai>=2.26.0",
    "python-dotenv>=1.2.2",
]
